vendor/registry-40351f815f426200/remain/tests/ui/unnamed-fields.stderr
error: expected enum, struct, or match expression
 --> $DIR/unnamed-fields.rs:1:1
  |
1 | #[remain::sorted]
  | ^^^^^^^^^^^^^^^^^

error: expected enum, struct, or match expression
 --> $DIR/unnamed-fields.rs:4:1
  |
4 | #[remain::sorted]
  | ^^^^^^^^^^^^^^^^^
