vendor/registry-40351f815f426200/remain/tests/ui/unnamed-fields.rs
#[remain::sorted]
struct TupleStruct(usize, usize, usize);

#[remain::sorted]
struct UnitStruct;

fn main() {}
